BIS-2508 : AFS trashcan and versioning